--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -9,7 +9,7 @@
         Title="MainWindow" Height="350" Width="525">
     
     <Grid>
-        <TreeView ItemsSource="{Binding Document.Outlines}">
+        <TreeView ItemsSource="{Binding Document.Children}">
             <TreeView.ItemContainerStyle>
                 <Style TargetType="{x:Type TreeViewItem}">
                     <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}" />
@@ -24,8 +24,14 @@
             </TreeView.ItemContainerStyle>
 
             <TreeView.ItemTemplate>
-                <HierarchicalDataTemplate ItemsSource="{Binding Children}">
-                    <TextBlock Text="{Binding Text}" />
+                <HierarchicalDataTemplate ItemsSource="{Binding Children}" >
+                    <Grid Background="Yellow">
+                        <TextBox Text="{Binding Text}" >
+                            <TextBox.InputBindings>
+                                <KeyBinding Key="Return" Command="{Binding AddNewSiblingCommand}" />
+                            </TextBox.InputBindings>
+                        </TextBox>
+                    </Grid>
                 </HierarchicalDataTemplate>
             </TreeView.ItemTemplate>
         </TreeView>
